Extract language tag template and reuse
This also changes the design to the colored dot instead of colored
background for readability reasons.

--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -11,10 +11,10 @@
                 <h2 class="mt-0 mr-4">
                   <%= project.name %>
                 </h2>
-                <span class="text-white rounded px-4 py-1 text-center"
-                      style="background-color: <%= project.data["language"]["color"] %>;">
-                    <%= project.data["language"]["name"] %>
-                </span>
+
+                <%= render AdoptopossWeb.SharedView, "language_tag.html",
+                  name: project.data["language"]["name"],
+                  color: project.data["language"]["color"] %>
               </div>
 
               <div class="text-gray-600 mt-2">
