--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -2,15 +2,15 @@
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto">
       <div class="flex flex-row justify-between items-start w-full">
-        <h2 class="mt-0 mr-4 overflow-y-hidden truncate">
+        <h2 class="mt-0 mr-6 overflow-y-hidden truncate">
           <a href="<%= @project.data["url"] %>" title="<%= @project.data["url"] %>" class="text-pink-900">
             <%= String.trim(@project.name) %>
           </a>
         </h2>
-        <span class="text-white rounded px-4 py-1 text-center"
-              style="background-color: <%= @project.data["language"]["color"] %>;">
-            <%= @project.data["language"]["name"] %>
-        </span>
+
+        <%= render AdoptopossWeb.SharedView, "language_tag.html",
+          name: @project.data["language"]["name"],
+          color: @project.data["language"]["color"] %>
       </div>
 
       <div class="text-gray-600 mt-2">
