Change project language into a reference to tags
This add an "unknown" utility tag for submitting repos without a language.
Just in case.

--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -9,8 +9,8 @@
         </h2>
 
         <%= render AdoptopossWeb.SharedView, "language_tag.html",
-          name: @project.data["language"]["name"],
-          color: @project.data["language"]["color"] %>
+          name: @project.language.name,
+          color: @project.language.color %>
       </div>
 
       <div class="text-gray-600 mt-2">
