--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,9 +1,9 @@
-<div id="<%= @id %>" class="list-item flex flex-wrap w-full shadow hover:shadow-md border border-gray-300">
+<div id="<%= @id %>" class="list-item flex shadow hover:shadow-md border border-gray-300">
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto">
-      <div class="flex flex-row justify-between items-start w-full">
+      <div class="flex flex-row justify-between items-start w-full overflow-y-hidden truncate">
         <h2 class="mt-0 mr-6 overflow-y-hidden truncate">
-          <a href="<%= @project.data["url"] %>" title="<%= @project.data["url"] %>" class="text-pink-900">
+          <a href="<%= @project.data["url"] %>" title="<%= String.trim(@project.name) %>" class="text-pink-900">
             <%= String.trim(@project.name) %>
           </a>
         </h2>
