--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,4 +1,4 @@
-<div id="<%= @id %>" class="list-item flex shadow hover:shadow-md border border-gray-300">
+<div id="<%= @id %>" class="list-item shadow hover:shadow-md border border-gray-300">
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto">
       <div class="flex flex-row justify-between items-start w-full overflow-y-hidden truncate">
