Fix texts and use link helpers for nav links

--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -24,25 +24,35 @@
         </div>
 
         <div class="w-full text-md block flex-grow justify-end lg:flex lg:flex-row lg:items-end lg:w-auto">
-          <%= live_redirect "Search", to: Routes.live_path(@conn, AdoptopossWeb.SearchLive), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
+          <%= live_redirect "Search",
+            to: Routes.live_path(@conn, AdoptopossWeb.SearchLive),
+            class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
           <%= if @current_user do %>
-            <%= live_redirect "Submit Repos", to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
+            <%= live_redirect "Submit Repo",
+              to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username),
+              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-            <%= live_redirect "Your Projects", to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
+            <%= live_redirect "Your Projects",
+              to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
+              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-            <%= live_redirect "Settings", to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive), class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
+            <%= live_redirect "Settings",
+              to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
+              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-            <a href="/auth/github/logout" class="block mt-4 lg:flex lg:mt-0 mr-4 p-2">
-              Logout
-            </a>
+            <%= link "Logout",
+              to: "/auth/github/logout",
+              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
 
-            <img class="inline-block rounded-full h-10 w-10" width="30px" src="<%= @current_user.avatar_url %>" alt="<%=@current_user.name %>">
+            <img class="inline-block rounded-full h-10 w-10" width="30px"
+              src="<%= @current_user.avatar_url %>"
+              alt="<%=@current_user.name %>">
           <% else %>
             <div class="block md:inline-block">
-              <a href="/auth/github" class="inline-block text-md px-4 py-2 leading-none border border-red-300 rounded mt-4 lg:mt-0">
-                Login with GitHub
-              </a>
+              <%= live_redirect "Login with GitHub",
+                to: "/auth/github",
+                class: "inline-block text-md px-4 py-2 leading-none border border-red-300 rounded mt-4 lg:mt-0" %>
             </div>
           <% end %>
         </div>
