--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -1,5 +1,5 @@
 <section>
-  <h1>Your submitted projects</h1>
+  <h1>Your Submitted Projects</h1>
 
   <ul id="projects" class="mt-6">
     <%= for project <- @projects do %>
