--- a/lib/adoptoposs_web/templates/repo/index.html.leex
+++ b/lib/adoptoposs_web/templates/repo/index.html.leex
@@ -1,7 +1,7 @@
 <div class="pt-8 pb-12 mb-12 bg-gray-200">
   <section class="flex flex-wrap flex-row justify-center items-center">
-    <h1 class="text-center mr-4">
-      Submit repos from
+    <h1 class="mr-4">
+      Submit Repo from
     </h1>
 
     <div class="flex flex-wrap flex-row justify-center items-center">
@@ -11,12 +11,12 @@
             <svg class="fill-current h-8 w-8 text-pink-900" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
           </div>
 
-          <select name="id" class="block appearance-none w-full bg-gray-200 py-2 pr-12 leading-tight focus:outline-none text-4xl font-semibold text-pink-900 border-b-4 border-pink-900">
+          <select name="id" class="block appearance-none w-full bg-gray-200 py-2 pr-12 leading-tight focus:outline-none text-4xl font-semibold text-pink-900 border-b-4 border-pink-900 cursor-pointer">
             <%= for organization <- @organizations do %>
               <option value="<%= organization.id %>"
                 phx-value_id="<%= organization.id %>"
                 <%= selected_attr(@organization, organization) %>>
-                <span class="text-pink-900"><%= organization.name %></span>
+                <%= organization.name %>
               </option>
             <% end %>
           </select>
