Adjust styles for project and repo list items

--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -3,9 +3,9 @@
 
   <ul id="projects" class="mt-6">
     <%= for project <- @projects do %>
-      <li id="project-<%= project.id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-300">
+      <li id="project-<%= project.id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-400 rounded">
         <div class="flex flex-row justify-between w-full">
-          <div class="flex flex-col flex-1 items-start justify-between px-6 pt-6 pb-4 bg-white">
+          <div class="flex flex-col flex-1 items-start justify-between px-6 pt-6 pb-4 bg-white rounded-tl rounded-bl">
             <div class="w-full">
               <div class="flex flex-row flex-wrap justify-between items-center">
                 <h2 class="mt-0 mr-4">
@@ -35,7 +35,7 @@
             </div>
           </div>
 
-          <div class="flex flex-col justify-between flex-1 px-6 pt-6 pb-4 bg-gray-200">
+          <div class="flex flex-col justify-between flex-1 px-6 pt-6 pb-4 bg-gray-200 rounded-tr rounded-br">
             <%= if @edit_id == to_string(project.id) do %>
               <%= render AdoptopossWeb.SharedView, "form.html",
                 id: project.id,
