--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -1,6 +1,6 @@
-<div id="<%= @id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-300">
+<div id="<%= @id %>" class="flex flex-wrap w-full mb-4 border border-gray-400 <%= if @submitted, do: "border-gray-400", else: "shadow hover:shadow-md" %> rounded">
   <div class="flex flex-row justify-between w-full">
-    <div class="flex flex-col flex-1 items-start p-6 bg-white">
+    <div class="flex flex-col flex-1 items-start p-6 rounded-tl rounded-bl <%= if @submitted, do: "bg-gray-100", else: "bg-white" %>">
       <div class="flex flex-row flex-wrap justify-between items-start w-full">
         <h2 class="mt-0 mr-4">
           <%= @repo.name %>
@@ -15,10 +15,14 @@
       </div>
     </div>
 
-    <div class="flex flex-col justify-center items-end flex-1 px-6 pt-6 pb-4 <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
+    <div class="flex flex-col justify-center items-end flex-1 px-6 pt-6 pb-4 rounded-tr rounded-br <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
       <%= if @submitted do %>
         <span class="mt-4
-        mb-6 p-4 h-16 w-16 rounded rounded-full border text-center text-pink-900 bg-green-200">✔</span>
+        mb-6 p-4 h-16 w-16 rounded rounded-full border text-center text-pink-900 bg-green-200">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-8 w-8 p-2 fill-current text-green-700">
+            <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
+          </svg>
+        </span>
       <% else %>
         <%= if !@to_be_submitted do %>
           <%= submit "+", id: "btn-submit-#{@id}", phx_click: "attempt_submit", phx_target: "##{@id}", class: "h-16 w-16 rounded rounded-full text-3xl font-light mb-4" %>
