--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Adoptoposs · Keep open source projects maintained</title>
+    <title>Adoptoposs · Keep open source software maintained</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
 
@@ -13,7 +13,7 @@
       <nav role="navigation">
         <div class="flex items-center flex-shrink-0 mr-6">
           <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.PageLive), class: "font-semibold text-xl tracking-tight" do %>
-            <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs Logo"/>
+            <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs"/>
           <% end %>
         </div>
 
@@ -59,7 +59,7 @@
       </nav>
     </header>
 
-    <main role="main" >
+    <main role="main" class="pb-8">
       <section>
         <%= if get_flash(@conn, :error) do %>
           <p class="bg-red-400 text-white text-center font-medium p-4" role="alert"><%= get_flash(@conn, :error) %></p>
@@ -69,13 +69,13 @@
       <%= render @view_module, @view_template, assigns %>
     </main>
 
-    <footer class="bg-gray-900 text-red-400">
+    <footer class="bg-gray-900 text-red-400 py-10">
       <section>
         <div class="flex flex-row flex-wrap justify-between">
         <ul>
           <li><a href="#" title="Privacy Policy">Privacy Policy</a></li>
-          <li><a href="#" title="Impressum">What is Adoptoposs?</a></li>
-          <li><a href="#" title="Impressum">Found any bug?</a></li>
+          <li><a href="#" title="About">What is Adoptoposs?</a></li>
+          <li><a href="#" title="Open an Issue">Found any bug?</a></li>
         </ul>
         <div>
           <a href="https://github.com/paulgoetze/adoptoposs">Fork us on GitHub</a>
