--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,6 +1,6 @@
-<div id="<%= @id %>" class="list-item shadow hover:shadow-md border border-gray-300">
+<div id="<%= @id %>" class="list-item shadow hover:shadow-md rounded border border-gray-300">
   <div class="flex flex-row justify-between w-full">
-    <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto">
+    <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto rounded-tl rounded-bl">
       <div class="flex flex-row justify-between items-start w-full overflow-y-hidden truncate">
         <h2 class="mt-0 mr-6 overflow-y-hidden truncate">
           <a href="<%= @project.data["url"] %>" title="<%= String.trim(@project.name) %>" class="text-pink-900">
@@ -18,7 +18,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col flex-1 flex-grow px-6 pt-6 pb-4 bg-gray-200">
+    <div class="flex flex-col flex-1 flex-grow px-6 pt-6 pb-4 bg-gray-200 rounded-tr rounded-br">
       <%= live_component @socket, AdoptopossWeb.InterestComponent,
         id: "interest-#{@project.id}",
         project: @project,
