--- a/lib/adoptoposs_web/templates/layout/email.html.eex
+++ b/lib/adoptoposs_web/templates/layout/email.html.eex
@@ -12,7 +12,7 @@
   <footer>
     <div>
       <small>
-        Visit <%= link AdoptopossWeb.Endpoint.host(), to: Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.PageLive) %> to find co-maintainers for your open source software project!
+        Visit <%= link AdoptopossWeb.Endpoint.host(), to: Routes.live_url(AdoptopossWeb.Endpoint, AdoptopossWeb.LandingPageLive) %> to find co-maintainers for your open source software project!
       </small>
     <div>
     <div>
