--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -17,15 +17,15 @@
 
     <div class="flex flex-col justify-center items-end flex-1 px-6 pt-6 pb-4 rounded-tr rounded-br <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
       <%= if @submitted do %>
-        <span class="mt-4
-        mb-6 p-4 h-16 w-16 rounded rounded-full border text-center text-pink-900 bg-green-200">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-8 w-8 p-2 fill-current text-green-700">
+        <span class="mt-2
+        mb-4 p-4 h-16 w-16 rounded rounded-full border text-center text-green-700 bg-green-200">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-8 w-8 p-2 fill-current">
             <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
           </svg>
         </span>
       <% else %>
         <%= if !@to_be_submitted do %>
-          <%= submit "+", id: "btn-submit-#{@id}", phx_click: "attempt_submit", phx_target: "##{@id}", class: "h-16 w-16 rounded rounded-full text-3xl font-light mb-4" %>
+          <%= submit "+", id: "btn-submit-#{@id}", phx_click: "attempt_submit", phx_target: "##{@id}", class: "h-16 w-16 rounded rounded-full text-3xl font-light mb-4", title: "Submit Repo" %>
         <% else %>
           <%= render AdoptopossWeb.SharedView, "form.html",
             id: @repo.id,
