--- a/lib/adoptoposs_web/templates/interest/actions.html.leex
+++ b/lib/adoptoposs_web/templates/interest/actions.html.leex
@@ -11,7 +11,7 @@
       <% end %>
     </div>
 
-    <div class="text-gray-700 mb-2">
+    <div class="markdown text-gray-700 my-2">
       <%= {:safe, Earmark.as_html!(@project.description)} %>
     </div>
   </div>
