--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -1,18 +1,7 @@
 <div id="<%= @id %>" class="flex flex-wrap w-full mb-4 border border-gray-400 <%= if @submitted, do: "border-gray-400", else: "shadow hover:shadow-md" %> rounded">
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 rounded-tl rounded-bl <%= if @submitted, do: "bg-gray-100", else: "bg-white" %>">
-      <div class="flex flex-row flex-wrap justify-between items-start w-full">
-        <h2 class="mt-0 mr-4">
-          <%= @repo.name %>
-        </h2>
-        <%= render AdoptopossWeb.SharedView, "language_tag.html",
-          name: @repo.language.name,
-          color: @repo.language.color %>
-      </div>
-
-      <div class="text-gray-600 mt-2">
-        <%= {:safe, Earmark.as_html!(@repo.description)} %>
-      </div>
+      <%= render AdoptopossWeb.SharedView, "project_repo.html", project: @repo %>
     </div>
 
     <div class="flex flex-col justify-center items-end flex-1 px-6 pt-6 pb-4 rounded-tr rounded-br <%= if @submitted || @to_be_submitted, do: "bg-gray-200", else: "bg-white" %>">
