--- a/lib/adoptoposs_web/templates/layout/app.html.eex
+++ b/lib/adoptoposs_web/templates/layout/app.html.eex
@@ -10,53 +10,7 @@
 
   <body>
     <header>
-      <nav role="navigation">
-        <div class="flex items-center flex-shrink-0 mr-6">
-          <%= live_redirect to: Routes.live_path(@conn, AdoptopossWeb.LandingPageLive), class: "font-semibold text-xl tracking-tight" do %>
-            <img src="<%= Routes.static_path(@conn, "/images/adoptoposs.png") %>" alt="Adoptoposs"/>
-          <% end %>
-        </div>
-
-        <div class="block lg:hidden">
-          <button class="flex items-center px-3 py-2 border-red-300">
-            <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-          </button>
-        </div>
-
-        <div class="w-full text-md block flex-grow justify-end lg:flex lg:flex-row lg:items-end lg:w-auto">
-          <%= live_redirect "Search",
-            to: Routes.live_path(@conn, AdoptopossWeb.SearchLive),
-            class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
-
-          <%= if @current_user do %>
-            <%= live_redirect "Submit Repo",
-              to: Routes.live_path(@conn, AdoptopossWeb.RepoLive, @current_user.username),
-              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
-
-            <%= live_redirect "Your Projects",
-              to: Routes.live_path(@conn, AdoptopossWeb.ProjectLive.Index),
-              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
-
-            <%= live_redirect "Settings",
-              to: Routes.live_path(@conn, AdoptopossWeb.SettingsLive),
-              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
-
-            <%= link "Logout",
-              to: "/auth/github/logout",
-              class: "block mt-4 lg:flex lg:mt-0 mr-4 p-2" %>
-
-            <img class="inline-block rounded-full h-10 w-10" width="30px"
-              src="<%= @current_user.avatar_url %>"
-              alt="<%=@current_user.name %>">
-          <% else %>
-            <div class="block md:inline-block">
-              <%= live_redirect "Login with GitHub",
-                to: "/auth/github",
-                class: "inline-block text-md px-4 py-2 leading-none border border-red-300 rounded mt-4 lg:mt-0" %>
-            </div>
-          <% end %>
-        </div>
-      </nav>
+      <%= render AdoptopossWeb.SharedView, "navigation.html", assigns %>
     </header>
 
     <main role="main" class="pb-8">
