--- a/lib/adoptoposs_web/templates/shared/project_repo.html.eex
+++ b/lib/adoptoposs_web/templates/shared/project_repo.html.eex
@@ -1,17 +1,20 @@
-<div class="flex flex-row justify-between items-start w-full overflow-y-hidden truncate">
-  <h2 class="mt-0 mr-6 overflow-y-hidden truncate leading-tight">
-    <%= link String.trim(@project.name),
-      to: project_url(@project),
-      class: "text-pink-900" %>
-  </h2>
+<div class="w-full">
+  <div class="flex flex-row flex-wrap justify-between items-start w-full overflow-y-hidden truncate">
+    <h2 class="mt-0 mr-6 overflow-y-hidden truncate leading-tight mb-2">
+      <%= link String.trim(@project.name),
+        to: project_url(@project),
+        class: "text-pink-900" %>
+    </h2>
 
-  <%= render AdoptopossWeb.SharedView, "language_tag.html",
-    name: @project.language.name,
-    color: @project.language.color %>
-</div>
-
-<%= unless assigns[:hide_description] == true do %>
-  <div class="markdown text-gray-600 mt-2">
-    <%= {:safe, Earmark.as_html!(String.trim(project_description(@project)))} %>
+    <%= render AdoptopossWeb.SharedView, "language_tag.html",
+      name: @project.language.name,
+      color: @project.language.color,
+      class: "mb-2" %>
   </div>
-<% end %>
+
+  <%= unless assigns[:hide_description] == true do %>
+    <div class="markdown text-gray-600">
+      <%= {:safe, Earmark.as_html!(String.trim(project_description(@project)))} %>
+    </div>
+  <% end %>
+</div>
