--- a/lib/adoptoposs_web/templates/shared/language_tag.html.eex
+++ b/lib/adoptoposs_web/templates/shared/language_tag.html.eex
@@ -1,4 +1,4 @@
-<div class="flex flex-row flex-no-wrap min-width-0 items-center bg-white text-pink-900 border border-gray-400 font-semibold rounded cursor-default py-1">
+<div class="flex flex-row flex-no-wrap min-width-0 items-center bg-white text-pink-900 border border-gray-400 font-semibold rounded cursor-default py-1 <%= assigns[:class] %>">
   <div class="w-3 h-3 rounded rounded-full ml-2 bg-gray-500"
     style="background-color: <%= @color %>;">
   </div>
