--- a/lib/adoptoposs_web/templates/interest/actions.html.leex
+++ b/lib/adoptoposs_web/templates/interest/actions.html.leex
@@ -1,4 +1,4 @@
-<div id="<%= @id %>" class="flex flex-col justify-end">
+<div id="<%= @id %>" class="flex flex-col justify-between h-full">
   <div>
     <div class="text-gray-700 font-semibold">
       <%= if @project.user_id == @user_id  do %>
@@ -38,7 +38,7 @@
             cancel_event: "cancel",
             phx_target: "##{@id}" %>
       <% else %>
-        <div class="icon-button" phx-click="attempt_contact" phx-target="#<%= @id %>" title="Contact maintainer">
+        <div class="icon-button mb-2 md:mb-0" phx-click="attempt_contact" phx-target="#<%= @id %>" title="Contact maintainer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
             <path d="M18 2a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h16zm-4.37 9.1L20 16v-2l-5.12-3.9L20 6V4l-10 8L0 4v2l5.12 4.1L0 14v2l6.37-4.9L10 14l3.63-2.9z"/>
           </svg>
