--- a/lib/adoptoposs_web/templates/search/index.html.leex
+++ b/lib/adoptoposs_web/templates/search/index.html.leex
@@ -1,4 +1,4 @@
-<div class="pt-8 pb-12 mb-12 bg-gray-200">
+<div class="pt-2 md:pt-8 pb-6 md:pb-12 mb-6 md:mb-12 bg-gray-200">
   <section>
     <h1 class="text-center">
       Find projects and join as a maintainer
@@ -7,7 +7,7 @@
     <div class="mt-2">
       <form class="flex flex-wrap items-center" phx-submit="search" phx-change="search">
         <input type="search"
-          class="flex-grow border border-red-500 rounded-full h-16 px-8 mr-4 text-red-600"
+          class="flex-grow border border-red-500 rounded-full h-16 px-8 text-red-600"
           id="search"
           name="q"
           value="<%= @query %>"
@@ -22,9 +22,9 @@
 
 <section>
   <%= if @query && @page == 1 && Enum.empty?(@projects) do %>
-    <div class="flex items-center justify-center text-center h-48 bg-white rounded-md shadow-md border border-gray-300">
+    <div class="flex items-center justify-center text-center p-4 h-32 md:h-48 min-h-full bg-white rounded-md shadow-md border border-gray-300">
       <span class="text-pink-900 text-lg font-medium">
-        Sorry, no projects found for "<%= @query %>" :(
+        Sorry, no projects found for <span class="text-red-500">"<%= @query %>"</span> :(
       </span>
     </div>
   <% else %>
