Fix top padding for add-repo-form on mobile

--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -23,7 +23,7 @@
             submit_event: "submit_project",
             cancel_event: "cancel_submit",
             phx_target: "##{@id}",
-            class: "py-2 md:py-0" %>
+            class: "pt-4 pb-2 md:py-0" %>
         <% end %>
       <% end %>
     </div>
