Shorten placeholder in search input

--- a/lib/adoptoposs_web/templates/search/index.html.leex
+++ b/lib/adoptoposs_web/templates/search/index.html.leex
@@ -13,7 +13,7 @@
           value="<%= @query %>"
           autocomplete="off"
           autofocus
-          placeholder="Search for project names, programming languages..."
+          placeholder="Search for projects, programming languages..."
           phx-debounce="500" />
       </form>
     </div>
